# masters-research

./: .gitignore  README.md  clean-data.sh  conversations.html  conversations.js  index.html  pyproject.toml  requirements.txt  results.html  results.js  styles.css  task-catalog.js  task-selection-guide.txt  tasks.html  tasks.js
fixtures/negative_flag_repo/src/: negative_flag_app.py
fixtures/negative_flag_repo/tests/: test_negative_flag_app.py
fixtures/no_color_repo/src/: no_color_app.py
fixtures/no_color_repo/tests/: test_no_color_app.py
fixtures/plugin_loader_repo/src/: plugin_loader.py
fixtures/plugin_loader_repo/tests/: test_plugin_loader.py
fixtures/tag_parser_repo/src/: tag_parser.py
fixtures/tag_parser_repo/tests/: test_tag_parser.py
scripts/: inject_manual_run.py  setup_repos.py
src/agentic_research/: __init__.py  benchmark.py  benchmark_cli.py  brains.py  cli.py  config.py  graphs.py  prompts.py  providers.py  sample_tasks.py  sandbox.py  site_export.py  state.py  transcript.py
tests/: test_benchmark.py  test_graphs.py  test_sandbox.py
